# Indigo

./: .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml  start.py
indigo/: base.py  config.py
indigo/aws/: client.py
indigo/database/: database.py  models.py  mongodb.py
indigo/models/: files.py  sections.py
indigo/systems/: models.py  system.py
indigo/systems/purpose/: chat_gpt_client.py  directory_validators.py  examiner.py  file_collector.py  file_validators.py  files.py  models.py  purpose_system.py  sections.py
indigo/tools/: linker.py  typer.py
indigo/utils/: code_utils.py  date_utils.py  hash_utils.py  math_utils.py  path_utils.py
scripts/: archive.py  archive_download.py  archive_models.py  start_database.py  stop_database.py
tests/: conftest.py  test_Schopenhauer.py  test_config.py  test_indigo.py
tests/test_base_models/: conftest.py  test_files.py  test_files_definitions.py  test_files_failures.py  test_sections.py  test_sections_definition.py
tests/test_base_system/: test_system.py  test_system_commands.py  test_system_database_resolver.py
tests/test_database/: test_database.py  test_records.py
tests/test_purpose_system/: conftest.py  test_directory_validators.py  test_file_collector.py  test_models.py  test_purpose_files.py  test_purpose_sections.py
tests/test_tools/: test_linker.py  test_typer.py
tests/test_utils/: test_date_utils.py  test_math_utils.py
