[project]
name = "Indigo"
version = "0.1.0"
description = "By Nikolay Marinov"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.36.16",
    "cryptography>=44.0.0",
    "docker>=7.1.0",
    "pydantic>=2.10.6",
    "pymongo>=4.11",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indigo"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "freezegun>=1.5.1",
    "pytest>=8.3.4",
    "rope>=1.13.0",
    "ruff>=0.9.5",
]

[tool.black]
line-length = 76
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 76
lint.extend-select = ["I"]
